<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_contato">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_nome_do_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textCapWords"
                tools:text="Nome exemplo" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_numero_contato">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_numero_do_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="phone"
                tools:text="55 17 964722860" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_meu_nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_meu_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textCapWords"
                tools:text="Meu nome exemplo" />


        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/check_box_junior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_incluir_junior" />

        <Spinner
            android:id="@+id/spinner_titulo_emprego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <CheckBox
            android:id="@+id/check_box_comeco_imediato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_comeco_imediato" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_disponivel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_data_disponivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="date"
                tools:text="06/03/2023" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/button_previa"
            android:text="@string/text_ver_previa" />


    </LinearLayout>


</ScrollView>